--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover {
-    height: 600px;
+    height: 700px;
   }
 }
 .fh5co-cover .display-t,
@@ -329,11 +329,11 @@ h1, h2, h3, h4, h5, h6, figure {
 @media screen and (max-width: 768px) {
   .fh5co-cover .display-t,
   .fh5co-cover .display-tc {
-    height: 600px;
+    height: 700px;
   }
 }
 .fh5co-cover.fh5co-cover-sm {
-  height: 600px;
+  height: 700px;
 }
 @media screen and (max-width: 768px) {
   .fh5co-cover.fh5co-cover-sm {
@@ -342,7 +342,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .fh5co-cover.fh5co-cover-sm .display-t,
 .fh5co-cover.fh5co-cover-sm .display-tc {
-  height: 600px;
+  height: 700px;
   display: table;
   width: 100%;
 }
@@ -355,7 +355,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 #fh5co-counter,
 #fh5co-event {
-  height: 850px;
+  height: 900px;
   float: left;
 }
 #fh5co-counter .display-t,
@@ -385,7 +385,7 @@ h1, h2, h3, h4, h5, h6, figure {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.85);
 }
 @media screen and (max-width: 768px) {
   #fh5co-counter,
@@ -412,6 +412,11 @@ h1, h2, h3, h4, h5, h6, figure {
   -ms-border-radius: 4px;
   border-radius: 4px;
 }
+
+.programme div {
+  margin-top: 1em;
+}
+
 @media screen and (max-width: 768px) {
   #fh5co-counter .event-wrap,
   #fh5co-event .event-wrap {
@@ -447,7 +452,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-counter {
-  height: 600px;
+  height: 700px;
 }
 @media screen and (max-width: 768px) {
   #fh5co-counter {
@@ -999,8 +1004,12 @@ form label {
 #fh5co-couple,
 #fh5co-gallery,
 .fh5co-section {
-  padding: 7em 0;
+  padding: 4em 0;
   clear: both;
+}
+
+#fh5co-event {
+  padding-top: 4em;
 }
 @media screen and (max-width: 768px) {
   #fh5co-testimonial,
@@ -1012,7 +1021,7 @@ form label {
   #fh5co-couple,
   #fh5co-gallery,
   .fh5co-section {
-    padding: 3em 0;
+    padding: 4em 0;
   }
 }
 
