--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,10 @@
   font-weight: normal;
   font-style: normal;
 }
-/* =======================================================
-*
-* 	Template Style 
-*
-* ======================================================= */
+
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Work Sans", Arial, sans-serif;
   font-weight: 400;
