--- a/css/style.css
+++ b/css/style.css
@@ -378,13 +378,14 @@ h1, h2, h3, h4, h5, h6, figure {
   font-weight: 600;
 }
 #fh5co-counter .overlay,
-#fh5co-event .overlay {
+#fh5co-event .overlay,
+#fh5co-started .overlay {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.85);
+  background: rgba(0, 0, 0, 0.8);
 }
 @media screen and (max-width: 768px) {
   #fh5co-counter,
@@ -694,10 +695,11 @@ h1, h2, h3, h4, h5, h6, figure {
   -moz-border-radius: 7px;
   -ms-border-radius: 7px;
   border-radius: 7px;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(35, 33, 35, 0.6);
 }
 #fh5co-gallery-list li a:hover:before {
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(35, 33, 33, 0.7);
+  transform: scale(1.05);
 }
 #fh5co-gallery-list li a .case-studies-summary {
   width: auto;
